--- a/src/SPIN.Devices.Abstractions/SPIN.Devices.Abstractions.csproj
+++ b/src/SPIN.Devices.Abstractions/SPIN.Devices.Abstractions.csproj
@@ -14,6 +14,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Iot.Device.Bindings" Version="3.1.0" />
+    <PackageReference Include="System.Device.Gpio" Version="3.1.0" />
     <PackageReference Include="UnitsNet" Version="5.31.0" />
   </ItemGroup>
 </Project>
